voila change request 23 - fixed scroll issue on Safari 02

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,8 @@ body.food_choice {
 body.food_co2 {
         /* background-color: var(--color-icon-bg);
         background-color: #50121c; */
+        /* transition: none;
+        background-color: #50121c; */
 }
 
 body.global_warming {
